# Velvet-Programing-Laguage

./: Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: npm-publish-github-packages.yml  rust.yml
cli/: cargo.toml  config.go  go.mod  logger.go  main.go
cli/src/: main.rs
core/: Cargo.toml  velvet.pest
core/src/: builder.rs  config.rs  error.rs  ffi.rs  interpreter.rs  lib.rs  logger.rs  main.rs  modules.rs  parser.rs  plugin_system.rs  repi.rs  runtime.rs  stdlib.rs  stdlib_1.rs  stdlib_2.rs  types.rs
core/src/core/src/: module_registry.rs
example/: velvet.vel
examples/: advanced.vel  advanced.velvet  ai_prediction.vel  crypto_ops.vel  db_sqlite.vel  debug.velvet  example.vel  for-gui-vel.json  gpu_cuda.vel  gui_advanced.vel  hello.velvet  http_workflow.vel  jython_gui.vel  main.vel  modern_gui.vel  module.velvet  net_websocket.vel  parallel_processing.vel  test.vel  test.velvet  vel.json  wayland_app.vel
gui/: package.json
gui/src/: app.js  (+4 more)
gui/src-tauri/: Cargo.toml  tauri.conf.json
scripts/: install.ps1  install.sh
src/: ast.rs  cli.rs  compiler.rs  interpreter.rs  lib_manager.py  main.rs  parser.rs  repl.rs  runtime.rs  tester.rs  utils.rs  velvet.pest  velvet_config.rs
tests/: test_advanced.velvet  test_basic.velvet  test_cli.go  test_interpreter.py  test_parser.rs
vel_modules/: ai.vel  ai_pytorch.vel  ai_tensorflow.vel  argparse.vel  array.vel  asyncio.vel  auth.vel  barcode.vel  base64.vel  cache.vel  camera.vel  collections.vel  compress.vel  config.vel  cpp_bost.vel  crypt_sign.vel  crypto.vel  crypto_aes.vel  crypto_wallet.vel  csharp_json.vel  csv.vel  csv_write.vel  datetime.vel  dateutil.vel  db.vel  db_mongo.vel  db_redis.vel  dotenv.vel  email.vel  email_validate.vel  file_copy.vel  file_zip.vel  fileio.vel  fs.vel  ftp.vel  ftp_download.vel  geo.vel  geo_coord.vel  hash_md5.vel  hash_sha1.vel  (+67 more)
velvet-jni/: pom.xml
(+33 files in other folders)
