[package]
name = "velvet-core"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
chrono = "0.4"
rayon = "1.7"
rusqlite = { version = "0.29", features = ["bundled"] }
websocket = "0.26"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.0", features = ["full"] }
regex = "1.7"
